# irc-rtlog-viewer

./: .gitignore  Cargo.toml  Makefile  README.md
openwrt/: irc-log-viewer.init
src/: ai.rs  main.rs  parser.rs  search.rs  server.rs  tail.rs  templates.rs
static/: style.css
